Correct deprecated methods to use advised call per javadoc. Suppress unchecked warning when creating an enum from String.